--- a/notebooks/sample_question_extraction.ipynb
+++ b/notebooks/sample_question_extraction.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "76dbc697",
    "metadata": {},
    "outputs": [],
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "fa1be1aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "import random \n",
     "\n",
-    "sampled_question_ids = random.sample(list(questions), 100)\n",
+    "sampled_question_ids = random.sample(list(questions), 2000)\n",
     "sampled_questions = {question_id: questions[question_id] for question_id in sampled_question_ids}\n",
     "\n",
     "for q_id, q in sampled_questions.items():\n",
@@ -42,12 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "a03ff15c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../../data/gqa/questions/train_sampled_questions.json', 'w') as f:\n",
+    "with open('../../data/gqa/questions/train_sampled_questions_2000.json', 'w') as f:\n",
     "    json.dump(sampled_questions, f, indent=4)"
    ]
   },
@@ -20391,7 +20391,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -20405,7 +20405,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
