cleaned up clip notebook, added prompt engineering notebook

--- a/notebooks/sample_question_extraction.ipynb
+++ b/notebooks/sample_question_extraction.ipynb
@@ -2,38 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3592133e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json \n",
     "\n",
-    "with open('../data/gqa/questions/train_balanced_questions.json') as f:\n",
+    "with open('../data/questions/train_balanced_questions.json') as f:\n",
     "    questions = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "76dbc697",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../../data/gqa/sceneGraphs/train_sceneGraphs.json') as f:\n",
+    "with open('../data/sceneGraphs/train_sceneGraphs.json') as f:\n",
     "    scene_graphs = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "fa1be1aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "import random \n",
     "\n",
-    "sampled_question_ids = random.sample(list(questions), 2000)\n",
+    "sampled_question_ids = random.sample(list(questions), 50000)\n",
     "sampled_questions = {question_id: questions[question_id] for question_id in sampled_question_ids}\n",
     "\n",
     "for q_id, q in sampled_questions.items():\n",
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../../data/gqa/questions/train_sampled_questions_2000.json', 'w') as f:\n",
+    "with open('../data/questions/train_sampled_questions_50000.json', 'w') as f:\n",
     "    json.dump(sampled_questions, f, indent=4)"
    ]
   },
