refactored vlp model evaluation code, added testing for x-vlm

--- a/notebooks/clip.ipynb
+++ b/notebooks/clip.ipynb
@@ -24,8 +24,8 @@
    "source": [
     "import sys, os\n",
     "\n",
-    "# sys path hack to allow importing the encoding functions\n",
-    "sys.path.insert(0, os.path.abspath('../encoding'))"
+    "# sys path hack to allow importing the encoding functions and other modules\n",
+    "sys.path.insert(0, os.path.abspath('..'))"
    ]
   },
   {
