--- a/notebooks/prompt_engineering.ipynb
+++ b/notebooks/prompt_engineering.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -14,6 +13,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys, os\n",
+    "\n",
+    "# sys path hack to allow importing the encoding functions and other modules\n",
+    "sys.path.insert(0, os.path.abspath('../encoding'))\n",
+    "sys.path.insert(0, os.path.abspath('../viper'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import json\n",
     "\n",
     "with open(\"../data/questions/train_sampled_questions_50000.json\") as f:\n",
@@ -21,7 +33,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -30,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +217,7 @@
     "    \n",
     "    attr_samples_negative.append({\n",
     "        **candidate,\n",
-    "        \"attr\": sample[\"attr_value\"],\n",
+    "        \"attr_value\": sample[\"attr_value\"],\n",
     "        \"y\": False\n",
     "    })\n",
     "attr_samples = [*attr_samples_positive, *attr_samples_negative]\n",
@@ -228,32 +239,21 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Testing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from transformers import CLIPProcessor, CLIPImageProcessor, CLIPTokenizer, CLIPModel\n",
-    "\n",
-    "model = CLIPModel.from_pretrained(\"openai/clip-vit-base-patch32\").to(\"mps\")\n",
-    "processor = CLIPProcessor.from_pretrained(\"openai/clip-vit-base-patch32\")\n",
-    "image_processor = CLIPImageProcessor.from_pretrained(\"openai/clip-vit-base-patch32\")\n",
-    "tokenizer = CLIPTokenizer.from_pretrained(\"openai/clip-vit-base-patch32\")"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-04-16 21:22:40.455205: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-04-16 21:22:40.479397: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-04-16 21:22:40.806034: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import pandas as pd\n",
@@ -311,64 +311,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch \n",
-    "from torchvision.io import read_image, ImageReadMode\n",
-    "from torchvision.transforms.functional import crop, resize, pad\n",
-    "from math import tanh\n",
     "\n",
-    "def scaling(x, ceiling=3):\n",
-    "    return (1 - tanh(x * 2)) * ceiling\n",
-    "\n",
-    "def get_scaled_bbox(entry, img_height, img_width, padding_scale_ceiling=0.5):\n",
-    "    padding_w = scaling(entry[\"bbox_w\"] / img_width, padding_scale_ceiling) * entry[\"bbox_w\"]\n",
-    "    padding_h = scaling(entry[\"bbox_h\"] / img_height, padding_scale_ceiling) * entry[\"bbox_h\"]\n",
-    "\n",
-    "    return (\n",
-    "        int(max(entry[\"bbox_y\"] - padding_h, 0)),\n",
-    "        int(max(entry[\"bbox_x\"] - padding_w, 0)),\n",
-    "        int(min(entry[\"bbox_h\"]+2*padding_h, img_height-max(entry[\"bbox_y\"] - padding_h, 0))),\n",
-    "        int(min(entry[\"bbox_w\"]+2*padding_w, img_width-max(entry[\"bbox_x\"] - padding_w, 0)))\n",
-    "    )\n",
-    "\n",
-    "class PromptDataset(torch.utils.data.Dataset):\n",
-    "    def __init__(self, df: pd.DataFrame, prompt_transform, img_size=224):\n",
-    "        self.df = df \n",
-    "        self.prompt_transform = prompt_transform\n",
-    "        self.img_size = img_size\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return self.df.shape[0]\n",
-    "    \n",
-    "    def __getitem__(self, idx):\n",
-    "        entry = self.df.iloc[idx]\n",
-    "        image = read_image(f\"../data/images/{entry['image_id']}.jpg\", ImageReadMode.RGB)\n",
-    "\n",
-    "        # crop bounding box\n",
-    "        y,x,h,w = get_scaled_bbox(entry, image.shape[1], image.shape[2])\n",
-    "        orig_image = crop(image, entry[\"bbox_y\"], entry[\"bbox_x\"], entry[\"bbox_h\"], entry[\"bbox_w\"])\n",
-    "        image = crop(image, y, x, h, w)\n",
-    "\n",
-    "        # resize and scale (maintain aspect ratio)\n",
-    "        if entry[\"bbox_h\"] > entry[\"bbox_w\"]:\n",
-    "            resize_dimensions = (self.img_size, 2*round((self.img_size*entry[\"bbox_w\"]/entry[\"bbox_h\"])/2)) \n",
-    "        else:\n",
-    "            resize_dimensions = (2*round((self.img_size*entry[\"bbox_h\"]/entry[\"bbox_w\"])/2), self.img_size)\n",
-    "        image = resize(image, resize_dimensions)\n",
-    "        orig_image = resize(orig_image, (self.img_size, self.img_size))\n",
-    "\n",
-    "        # pad the image to square dimensions\n",
-    "        image = pad(image, ((self.img_size - resize_dimensions[1])//2, (self.img_size - resize_dimensions[0])//2))\n",
-    "\n",
-    "        return (image, self.prompt_transform(entry), entry['y'])\n"
+    "if torch.cuda.is_available():\n",
+    "    gpu = torch.device(\"cuda\")\n",
+    "elif torch.backends.mps.is_available():\n",
+    "    gpu = torch.device(\"mps\")\n",
+    "else:\n",
+    "    print(\"Warning: no GPU detected, falling back to CPU\")\n",
+    "    gpu = torch.device(\"cpu\")"
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/guests/jhadl/.conda/envs/jhadl_tf/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/home/guests/jhadl/.conda/envs/jhadl_tf/lib/python3.11/site-packages/torch/functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3483.)\n",
+      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Clean old model from cache\n",
+    "if 'model' in locals() or 'model' in globals():\n",
+    "    del model\n",
+    "torch.cuda.empty_cache()\n",
+    "\n",
+    "# from models.clip_model import CLIPModel\n",
+    "# model = CLIPModel(gpu)\n",
+    "\n",
+    "from models.xvlm_model import XVLMModel\n",
+    "model = XVLMModel(gpu)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -377,51 +372,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.utils.data import DataLoader\n",
+    "from prompt_dataset import PromptDataset\n",
     "\n",
-    "batch_size = 64\n",
     "class_dataset = PromptDataset(class_samples_df, prompt_transform=lambda e: [\n",
-    "    f\"a photo of a {e['class']}\", \n",
-    "    \"a photo of an object\"\n",
-    "])"
+    "    f\"a bad photo of a {e['class']}\", \n",
+    "    \"a bad photo of an object\"\n",
+    "], img_size=model.img_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Class Accuracy: 85.02111053466797%\n"
+      "Accuracy: 84.926%\n",
+      "Precision: 0.861\n",
+      "Recall: 0.833\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': tensor(84.9264, device='cuda:0'),\n",
+       " 'precision': tensor(0.8610, device='cuda:0'),\n",
+       " 'recall': tensor(0.8330, device='cuda:0')}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "class_dataloader = DataLoader(class_dataset, batch_size=batch_size, shuffle=True)\n",
-    "class_correct = 0\n",
+    "from evaluator import Evaluator\n",
     "\n",
-    "for batch in class_dataloader:\n",
-    "    image_inputs = image_processor(batch[0], return_tensors=\"pt\", do_resize=False, do_center_crop=False).to(\"mps\")\n",
-    "    text_inputs = tokenizer([*batch[1][0], *batch[1][1]], return_tensors=\"pt\", padding=True).to(\"mps\")\n",
-    "    num_items = batch[0].shape[0]\n",
-    "\n",
-    "    result = model(**image_inputs, **text_inputs)\n",
-    "    scores = torch.stack([torch.diagonal(result[\"logits_per_image\"][:,:num_items]), torch.diagonal(result[\"logits_per_image\"][:,num_items:])])\n",
-    "    probs = torch.nn.functional.softmax(scores, dim=0)\n",
-    "    class_correct += sum((probs[0, :] > probs[1, :]) == batch[2].to(\"mps\"))\n",
-    "\n",
-    "print(f\"Class Accuracy: {class_correct/class_dataset.__len__()*100}%\")"
+    "class_evaluator = Evaluator(model, class_dataset, batch_size=8)\n",
+    "class_evaluator.evaluate()"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -430,48 +427,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from prompt_dataset import PromptDataset\n",
+    "\n",
     "attr_dataset = PromptDataset(attr_samples_df, prompt_transform=lambda e: [\n",
     "    f\"a photo of a {e['attr_value']} object\", \n",
-    "    f\"a photo of a normal object\"\n",
-    "])"
+    "    f\"a photo of an object\"\n",
+    "], img_size=model.img_size, mode=\"pad\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attributes Accuracy: 50.086944580078125%\n"
+      "Accuracy: 64.194%\n",
+      "Precision: 0.728\n",
+      "Recall: 0.453\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': tensor(64.1936, device='cuda:0'),\n",
+       " 'precision': tensor(0.7279, device='cuda:0'),\n",
+       " 'recall': tensor(0.4533, device='cuda:0')}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "attr_dataloader = DataLoader(attr_dataset, batch_size=batch_size, shuffle=True)\n",
-    "attr_correct = 0\n",
+    "from evaluator import Evaluator\n",
     "\n",
-    "for batch in attr_dataloader:\n",
-    "    image_inputs = image_processor(batch[0], return_tensors=\"pt\", do_resize=False, do_center_crop=False).to(\"mps\")\n",
-    "    text_inputs = tokenizer([*batch[1][0], *batch[1][1]], return_tensors=\"pt\", padding=True).to(\"mps\")\n",
-    "    num_items = batch[0].shape[0]\n",
-    "    \n",
-    "    result = model(**image_inputs, **text_inputs)\n",
-    "    scores = torch.stack([torch.diagonal(result[\"logits_per_image\"][:,:num_items]), torch.diagonal(result[\"logits_per_image\"][:,num_items:])])\n",
-    "    probs = torch.nn.functional.softmax(scores, dim=0)\n",
-    "    attr_correct += sum((probs[0, :] > probs[1, :]) == batch[2].to(\"mps\"))\n",
-    "\n",
-    "print(f\"Attributes Accuracy: {attr_correct/attr_dataset.__len__()*100}%\")"
+    "attr_evaluator = Evaluator(model, attr_dataset, batch_size=8)\n",
+    "attr_evaluator.evaluate()"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -480,58 +482,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from prompt_dataset import PromptDataset\n",
+    "\n",
     "rel_dataset = PromptDataset(rel_samples_df, prompt_transform=lambda e: [\n",
-    "    f\"a photo of a {e['object0_name']} {e['rel']} a {e['object1_name']}\", \n",
-    "    f\"a photo of a {e['object0_name']} and a {e['object1_name']}\"\n",
-    "])"
+    "    f\"a {e['object0_name']} {e['rel']} a {e['object1_name']}\", \n",
+    "    f\"a {e['object0_name']} and a {e['object1_name']}\"\n",
+    "], img_size=model.img_size, mode=\"scale\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jan/Git/tuw-master-thesis/.venv/lib/python3.10/site-packages/torchvision/transforms/functional.py:1603: UserWarning: The default value of the antialias parameter of all the resizing transforms (Resize(), RandomResizedCrop(), etc.) will change from None to True in v0.17, in order to be consistent across the PIL and Tensor backends. To suppress this warning, directly pass antialias=True (recommended, future default), antialias=None (current default, which means False for Tensors and True for PIL), or antialias=False (only works on Tensors - PIL will still use antialiasing). This also applies if you are using the inference transforms from the models weights: update the call to weights.transforms(antialias=True).\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Relations Accuracy: 55.75797653198242%\n"
+      "Accuracy: 54.068%\n",
+      "Precision: 0.545\n",
+      "Recall: 0.494\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': tensor(54.0677, device='cuda:0'),\n",
+       " 'precision': tensor(0.5449, device='cuda:0'),\n",
+       " 'recall': tensor(0.4941, device='cuda:0')}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "rel_dataloader = DataLoader(rel_dataset, batch_size=batch_size, shuffle=True)\n",
-    "rel_correct = 0\n",
+    "from evaluator import Evaluator\n",
     "\n",
-    "for batch in rel_dataloader:\n",
-    "    image_inputs = image_processor(batch[0], return_tensors=\"pt\", do_resize=False, do_center_crop=False).to(\"mps\")\n",
-    "    text_inputs = tokenizer([*batch[1][0], *batch[1][1]], return_tensors=\"pt\", padding=True).to(\"mps\")\n",
-    "\n",
-    "    num_items = batch[0].shape[0]\n",
-    "    result = model(**image_inputs, **text_inputs)\n",
-    "    scores = torch.stack([torch.diagonal(result[\"logits_per_image\"][:,:num_items]), torch.diagonal(result[\"logits_per_image\"][:,num_items:])])\n",
-    "    probs = torch.nn.functional.softmax(scores, dim=0)\n",
-    "    rel_correct += sum((probs[0, :] > probs[1, :]) == batch[2].to(\"mps\"))\n",
-    "\n",
-    "print(f\"Relations Accuracy: {rel_correct/rel_dataset.__len__()*100}%\")"
+    "rel_evaluator = Evaluator(model, rel_dataset, batch_size=8)\n",
+    "rel_evaluator.evaluate()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -545,9 +545,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.2"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "35ab78d29ed88d957c44548976856795b78553768444957779fbd79cbca61a7c"
