added contrastive evaluation; reduced memory usage by turning of gradient calculation

--- a/notebooks/prompt_engineering.ipynb
+++ b/notebooks/prompt_engineering.ipynb
@@ -247,10 +247,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-16 21:22:40.455205: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-04-16 21:22:40.479397: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-05-02 21:27:05.557270: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-05-02 21:27:05.582468: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-04-16 21:22:40.806034: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2023-05-02 21:27:05.908400: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -344,9 +344,7 @@
      "output_type": "stream",
      "text": [
       "/home/guests/jhadl/.conda/envs/jhadl_tf/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/home/guests/jhadl/.conda/envs/jhadl_tf/lib/python3.11/site-packages/torch/functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3483.)\n",
-      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -356,18 +354,27 @@
     "    del model\n",
     "torch.cuda.empty_cache()\n",
     "\n",
-    "# from models.clip_model import CLIPModel\n",
-    "# model = CLIPModel(gpu)\n",
+    "from models.clip_model import CLIPModel\n",
+    "model = CLIPModel(gpu)\n",
     "\n",
-    "from models.xvlm_model import XVLMModel\n",
-    "model = XVLMModel(gpu)"
+    "# from models.xvlm_model import XVLMModel\n",
+    "# model = XVLMModel(gpu)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Classes"
+    "### Target vs. Neutral"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Classes"
    ]
   },
   {
@@ -419,10 +426,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Attributes"
+    "#### Attributes"
    ]
   },
   {
@@ -474,10 +482,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Relations"
+    "#### Relations"
    ]
   },
   {
@@ -526,6 +535,167 @@
     "\n",
     "rel_evaluator = Evaluator(model, rel_dataset, batch_size=8)\n",
     "rel_evaluator.evaluate()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Target vs. Contrastive Ensemble"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open(\"../data/metadata/gqa_all_class.json\") as f:\n",
+    "    classes = json.load(f)\n",
+    "    \n",
+    "with open(\"../data/metadata/gqa_all_attribute.json\") as f:\n",
+    "    attributes = json.load(f)\n",
+    "    \n",
+    "with open(\"../data/metadata/gqa_relation.json\") as f:\n",
+    "    relations = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random \n",
+    "\n",
+    "classes_sample = random.sample([item.replace('_', ' ') for items in classes.values() for item in items], 100)\n",
+    "attributes_sample = random.sample([item.replace('_', ' ') for items in attributes.values() for item in items], 100)\n",
+    "rels_sample = random.sample([item.replace('_', ' ') for item in relations], 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes_prompts = [f\"a bad photo of a {clazz}\" for clazz in classes_sample]\n",
+    "attr_prompts = [f\"a bad photo of a {attr} object\" for attr in attributes_sample]\n",
+    "rel_prompts = [f\"a bad photo of an object {rel} an object\" for rel in rels_sample]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from prompt_dataset import PromptDataset\n",
+    "\n",
+    "class_dataset = PromptDataset(class_samples_df, prompt_transform=lambda e: [\n",
+    "    f\"a bad photo of a {e['class']}\", \n",
+    "    \"a bad photo of an object\"\n",
+    "], img_size=model.img_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 68.623%\n",
+      "Precision: 0.626\n",
+      "Recall: 0.924\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': 68.62349428600845,\n",
+       " 'precision': 0.6262933742930951,\n",
+       " 'recall': 0.923545763409863}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from contrastive_evaluator import ContrastiveEvaluator\n",
+    "\n",
+    "class_evaluator = ContrastiveEvaluator(model, class_dataset, classes_prompts, batch_size=64)\n",
+    "class_evaluator.evaluate()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from prompt_dataset import PromptDataset\n",
+    "\n",
+    "attr_dataset = PromptDataset(attr_samples_df, prompt_transform=lambda e: [\n",
+    "    f\"a bad photo of a {e['attr_value']} object\", \n",
+    "    \"a bad photo of an regular object\"\n",
+    "], img_size=model.img_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 56.668%\n",
+      "Precision: 0.567\n",
+      "Recall: 0.564\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': 56.66811468288445,\n",
+       " 'precision': 0.5670110593713621,\n",
+       " 'recall': 0.5642195192586157}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from contrastive_evaluator import ContrastiveEvaluator\n",
+    "\n",
+    "attr_evaluator = ContrastiveEvaluator(model, attr_dataset, attr_prompts, batch_size=64)\n",
+    "attr_evaluator.evaluate()"
    ]
   }
  ],
