--- a/notebooks/prompt_engineering.ipynb
+++ b/notebooks/prompt_engineering.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "# sys path hack to allow importing the encoding functions and other modules\n",
     "sys.path.insert(0, os.path.abspath('../encoding'))\n",
-    "sys.path.insert(0, os.path.abspath('../viper'))"
+    "sys.path.insert(0, os.path.abspath('../externals/x_vlm'))"
    ]
   },
   {
@@ -247,10 +247,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-02 21:27:05.557270: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-05-02 21:27:05.582468: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-05-06 18:53:40.264901: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-05-06 18:53:40.290279: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-05-02 21:27:05.908400: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2023-05-06 18:53:40.640784: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -344,7 +344,18 @@
      "output_type": "stream",
      "text": [
       "/home/guests/jhadl/.conda/envs/jhadl_tf/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/home/guests/jhadl/.conda/envs/jhadl_tf/lib/python3.11/site-packages/torch/functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3483.)\n",
+      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "load checkpoint from ../data/models/4m_base_finetune/itr_coco/checkpoint_best.pth\n",
+      "missing_keys:  []\n",
+      "unexpected_keys:  []\n"
      ]
     }
    ],
@@ -354,11 +365,11 @@
     "    del model\n",
     "torch.cuda.empty_cache()\n",
     "\n",
-    "from models.clip_model import CLIPModel\n",
-    "model = CLIPModel(gpu)\n",
+    "# from models.clip_model import CLIPModel\n",
+    "# model = CLIPModel(gpu)\n",
     "\n",
-    "# from models.xvlm_model import XVLMModel\n",
-    "# model = XVLMModel(gpu)"
+    "from model.xvlm_itr_coco_model import XVLMModel\n",
+    "model = XVLMModel(gpu)"
    ]
   },
   {
@@ -442,8 +453,8 @@
     "from prompt_dataset import PromptDataset\n",
     "\n",
     "attr_dataset = PromptDataset(attr_samples_df, prompt_transform=lambda e: [\n",
-    "    f\"a photo of a {e['attr_value']} object\", \n",
-    "    f\"a photo of an object\"\n",
+    "    f\"{e['attr_value']} {e['object_name']}\", \n",
+    "    f\"{e['object_name']}\"\n",
     "], img_size=model.img_size, mode=\"pad\")"
    ]
   },
@@ -456,17 +467,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 64.194%\n",
-      "Precision: 0.728\n",
-      "Recall: 0.453\n"
+      "Accuracy: 49.728%\n",
+      "Precision: 0.496\n",
+      "Recall: 0.300\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'accuracy': tensor(64.1936, device='cuda:0'),\n",
-       " 'precision': tensor(0.7279, device='cuda:0'),\n",
-       " 'recall': tensor(0.4533, device='cuda:0')}"
+       "{'accuracy': tensor(49.7283, device='cuda:0'),\n",
+       " 'precision': tensor(0.4955, device='cuda:0'),\n",
+       " 'recall': tensor(0.2999, device='cuda:0')}"
       ]
      },
      "execution_count": 9,
@@ -477,7 +488,7 @@
    "source": [
     "from evaluator import Evaluator\n",
     "\n",
-    "attr_evaluator = Evaluator(model, attr_dataset, batch_size=8)\n",
+    "attr_evaluator = Evaluator(model, attr_dataset, batch_size=64)\n",
     "attr_evaluator.evaluate()"
    ]
   },
@@ -491,15 +502,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from prompt_dataset import PromptDataset\n",
     "\n",
     "rel_dataset = PromptDataset(rel_samples_df, prompt_transform=lambda e: [\n",
-    "    f\"a {e['object0_name']} {e['rel']} a {e['object1_name']}\", \n",
-    "    f\"a {e['object0_name']} and a {e['object1_name']}\"\n",
+    "    f\"{e['object0_name']} {e['rel']} {e['object1_name']}\", \n",
+    "    f\"{e['object0_name']} and {e['object1_name']}\"\n",
     "], img_size=model.img_size, mode=\"scale\")"
    ]
   },
@@ -512,17 +523,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 54.068%\n",
-      "Precision: 0.545\n",
-      "Recall: 0.494\n"
+      "Accuracy: 49.194%\n",
+      "Precision: 0.492\n",
+      "Recall: 0.477\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'accuracy': tensor(54.0677, device='cuda:0'),\n",
-       " 'precision': tensor(0.5449, device='cuda:0'),\n",
-       " 'recall': tensor(0.4941, device='cuda:0')}"
+       "{'accuracy': tensor(49.1941, device='cuda:0'),\n",
+       " 'precision': tensor(0.4917, device='cuda:0'),\n",
+       " 'recall': tensor(0.4765, device='cuda:0')}"
       ]
      },
      "execution_count": 11,
@@ -533,7 +544,7 @@
    "source": [
     "from evaluator import Evaluator\n",
     "\n",
-    "rel_evaluator = Evaluator(model, rel_dataset, batch_size=8)\n",
+    "rel_evaluator = Evaluator(model, rel_dataset, batch_size=64)\n",
     "rel_evaluator.evaluate()"
    ]
   },
